--- a/.github/workflows/github-stats.yml
+++ b/.github/workflows/github-stats.yml
@@ -17,7 +17,7 @@ jobs:
       - name: GitHub Stats Card
         uses: anuraghazra/github-readme-stats@master
         with:
-          username: Pasonnn
+          username: vutranquangminh
           show_icons: true
           count_private: true
           theme: tokyonight
@@ -26,7 +26,7 @@ jobs:
       - name: Generate Activity Graph
         uses: ashutosh00710/github-readme-activity-graph@main
         with:
-          github_user_name: Pasonnn
+          github_user_name: vutranquangminh
           theme: tokyo-night
           area: true
           hide_border: true 
