--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Generate Snake
         uses: Platane/snk/svg-only@v3
         with:
-          github_user_name: Pasonnn
+          github_user_name: vutranquangminh
           outputs: |
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
             
